@@ -1,10 +1,13 @@
 
 == ChangeLog (Coova Chilli current svn revision) ==
 
+== ChangeLog (Coova Chilli v1.0.9 svn revision 133) ==
+
 * Bug fix whereby the mac address of packets from the chilli redirect are overwritten	
 * Bug fix for 'leaky bucket' timediff calculations
 * Bug fix for ''uamserver'' URLs already with a query string
 * Bug fix for initial redirect url ''called'' parameter when ''nasmac'' is not configured
+* New options ''radiustimeout'', ''radiusretry'', and ''radiusretrysec'' - thanks [http://coova.org/lists/?0::75 Oliver]
 * Better Terminate-Cause for administrative reset (logout)
 * Fewer defaults set in 'defaults' script - assume chilli defaults instead
 * Fixes for native EAP over LAN (EAPOL) support
